--- a/index.html
+++ b/index.html
@@ -12,7 +12,21 @@
 </head>
 <body>
 
-    
+    <div class="header">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2">
+                    <h2>Sample <span>UI/UX</span></h2>
+                </div>
+                <div class="col-md-8">
+
+                </div>
+                <div class="col-md-2">
+
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/custom.js"></script>    
