--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 <body>
 
-    <div class="header">
+    <div class="header purple">
         <div class="container">
             <div class="row">
                 <div class="col-md-2">
-                    <h2>Sample <span>UI/UX</span></h2>
+                    <h2 class="text-white">Sample <span class="bold-900">UI/UX</span></h2>
                 </div>
                 <div class="col-md-8">
 
