--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Bamboo UI Framework</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+     <!-- Import Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800,900" rel="stylesheet">
+
     <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/scss/style.css">
 
